@startuml Payment_Strategy_Design_Architecture

!pragma layout smetana

' Professional Styling (Member 3 style)
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #4A90D9
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classBackgroundColor #F0F7FF
skinparam stereotypeCBackgroundColor #E8F4FD
skinparam ArrowColor #2C5F8A

title Payment Process Architecture (Strategy + Factory Patterns)

' =============================================
' 1. STRATEGY PATTERN (Payment Methods)
' =============================================
package "Payment Strategies" {
    interface PaymentStrategy <<interface>> {
        + validatePayment(order: Order) : boolean
        + requiresPrePayment() : boolean
        + processPayment(amount: BigDecimal) : void
        + getMethodName() : String
    }

    class CashPaymentStrategy {
        + validatePayment(order: Order) : boolean
        + requiresPrePayment() : false
        + processPayment(amount: BigDecimal) : void
        + getMethodName() : "Cash on Delivery"
    }

    class SepayPaymentStrategy {
        + validatePayment(order: Order) : boolean
        + requiresPrePayment() : true
        + processPayment(amount: BigDecimal) : void
        + getMethodName() : "Sepay (Online Payment)"
    }
}

' =============================================
' 2. FACTORY (Strategy Selection)
' =============================================
package "Strategy Factory" {
    class PaymentStrategyFactory {
        + getStrategy(method: PaymentMethod) : PaymentStrategy
        + getStrategy(methodName: String) : PaymentStrategy
    }
}

' =============================================
' 3. CLIENT (Checkout Service)
' =============================================
package "Service Coordination" {
    class CheckoutService {
        - strategyFactory : PaymentStrategyFactory
        + processOrderPayment(order: Order, method: String) : void
    }
}

' =============================================
' RELATIONSHIPS
' =============================================

' Strategy Implementations
PaymentStrategy <|-- CashPaymentStrategy
PaymentStrategy <|-- BankTransferPaymentStrategy
PaymentStrategy <|-- VnPayPaymentStrategy

' Factory usage
PaymentStrategyFactory o-- PaymentStrategy : manages collection >
CheckoutService --> PaymentStrategyFactory : requests strategy >
CheckoutService ..> PaymentStrategy : executes >

note bottom of PaymentStrategy
  Strategy Pattern đóng gói các thuật toán thanh toán khác nhau 
  (Tiền mặt, Chuyển khoản, VnPay) thành các lớp riêng biệt.
  Factory Pattern đơn giản hóa việc lựa chọn Strategy dựa trên đầu vào của người dùng, 
  đảm bảo hệ thống tuân thủ nguyên tắc OCP (Mở để mở rộng, Đóng để sửa đổi).
end note

@enduml
